# houston

./: CLAUDE.md  Cargo.toml  cli-deps.json  package.json
.github/release-notes/: 0.4.12.md  0.4.14.md  0.4.18.md  0.4.19.md  0.4.20.md  0.4.24.es.md  0.4.24.md  0.4.24.pt.md
.github/workflows/: release.yml
always-on/: Dockerfile
app/: package.json
app/houston-tauri/: Cargo.toml
app/src-tauri/: Cargo.toml
app/src/components/: chat-model-selector.tsx  context-indicator.tsx  task-timeline.tsx  turn-file-summary.tsx  usage-chart.tsx  usage-view.tsx  use-agent-chat-panel.tsx  use-chat-display-labels.tsx
app/src/components/board/: board-source.ts  column-actions-menu.tsx  use-agent-board-selection.ts  use-board-selection-ui.tsx  use-cross-agent-selection.ts  use-selection-set.ts
app/src/components/shell/: gemini-api-key-form.tsx  gemini-connect-dialog.tsx  naming-step.tsx  provider-cards.tsx  provider-error-card.tsx  provider-login-dialog.tsx  provider-logos.tsx  provider-picker.tsx  provider-settings.tsx  sidebar.tsx  update-checker.tsx  workspace-shell.tsx
app/src/components/tabs/: board-tab.tsx  chat-tab.tsx  connected-apps-section.tsx  routines-tab.tsx
app/src/data/: activity.ts  agent-tasks.ts
app/src/hooks/: use-cost-analytics.ts  use-session-events.ts  use-task-timeline.ts
app/src/lib/: context-usage.ts  i18n.ts  mission-selection.ts  open-href.ts  providers.ts  tauri.ts  turn-summary-items.ts
app/src/locales/en/: board.json  chat.json  common.json  providers.json  shell.json
app/src/locales/es/: board.json  chat.json  common.json  providers.json  shell.json
app/src/locales/pt/: board.json  chat.json  common.json  providers.json  shell.json
app/tests/: mission-selection.test.ts
engine/houston-agent-files/: Cargo.toml
engine/houston-agent-files/src/: lib.rs
engine/houston-agent-portable/: Cargo.toml
engine/houston-agents-conversations/: Cargo.toml
engine/houston-agents-conversations/src/: lib.rs  session_id_tracker.rs  session_pids.rs  session_runner.rs
engine/houston-agents-conversations/src/process_kill/: mod.rs  unix.rs  windows.rs
engine/houston-claude-installer/: Cargo.toml
engine/houston-cli-bundle/: Cargo.toml
engine/houston-cli-bundle/src/: lib.rs
engine/houston-composio/: Cargo.toml
engine/houston-db/: Cargo.toml
engine/houston-engine-core/: Cargo.toml
engine/houston-engine-core/src/: conversations.rs  git_bash.rs  lib.rs  reaper.rs  runtime_leases.rs  state.rs
engine/houston-engine-core/src/agents/: activity.rs  lifecycle.rs  (+3 more)
engine/houston-engine-protocol/: Cargo.toml
engine/houston-engine-protocol/src/: lib.rs
engine/houston-engine-server/: Cargo.toml
engine/houston-engine-server/src/: main.rs
engine/houston-engine-server/tests/: providers.rs  sessions.rs
engine/houston-events/: Cargo.toml
engine/houston-file-watcher/: Cargo.toml
engine/houston-scheduler/: Cargo.toml
engine/houston-skills/: Cargo.toml
engine/houston-skills/src/: lib.rs  remote.rs
engine/houston-terminal-manager/: Cargo.toml
engine/houston-terminal-manager/src/: claude_runner.rs  cli_process.rs  codex_parser.rs  codex_runner.rs  gemini_home.rs  gemini_parser.rs  gemini_parser_state.rs  gemini_runner.rs  lib.rs  manager.rs  parser.rs  provider_error.rs  provider_error_kind.rs  session_dispatch.rs  session_io.rs  types.rs
engine/houston-terminal-manager/src/provider/: anthropic.rs  anthropic_classify.rs  mod.rs  openai.rs  openai_classify.rs  resolve.rs
engine/houston-terminal-manager/src/provider/gemini/: classify.rs  dotenv.rs  mod.rs
engine/houston-tunnel/: Cargo.toml
engine/houston-ui-events/: Cargo.toml
knowledge-base/: agent-manifest.md  architecture.md  auth.md  cli-bundling.md  engine-protocol.md  files-first.md  i18n.md  platform-matrix.md  production-infra.md  provider-errors.md
mobile/src/components/: mission-control.tsx
scripts/: fetch-cli-deps.sh
ui/agent-schemas/src/: activity.schema.json
ui/board/: package.json
ui/board/src/: kanban-card-actions.tsx  kanban-card.tsx
ui/chat/: package.json
ui/chat/src/: chat-process-block.tsx  chat-process-header.ts  chat-status.ts  feed-to-messages.ts  index.ts  tool-labels.ts  types.ts
ui/chat/test/: feed-to-messages.test.mjs
ui/chat/tests/: chat-process-header.test.ts
ui/core/: package.json
ui/engine-client/src/: client.ts  types.ts
ui/events/: package.json
ui/layout/: package.json
ui/review/: package.json
ui/routines/: package.json
ui/routines/src/: schedule-builder.tsx  schedule-cron-utils.ts
ui/routines/tests/: schedule-cron-utils.test.ts
ui/skills/: package.json
(+23 files in other folders)
