[package]
name = "houston-app"
version = "0.4.19"
edition = "2021"

[lib]
name = "houston_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools` = enables WKWebView inspector in debug AND release. In practice
# only dev builds benefit — production ships to non-technical users — but
# having it on across the board means Cmd+Opt+I works whenever someone
# runs `pnpm tauri dev` or ships a dev build to a collaborator.
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
houston-tauri = { path = "../houston-tauri" }
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-sentry = "0.5"
sentry = "0.42"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
houston-ui-events = { path = "../../engine/houston-ui-events" }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# Windows + Linux only: the OS protocol handler launches a fresh
# `houston-app.exe` for every `houston://` URL it receives (Start-menu
# launches go to `C:\Program Files\Houston\…`, protocol-handler launches
# go to the 8.3 short form `C:\PROGRA~1\Houston\…`). Without
# single-instance the second exe holds an orphan webview while the
# primary sits on the login screen forever, never receiving the OAuth
# callback. The `deep-link` feature makes the second-instance argv
# auto-route into the primary's `on_open_url` handler.
# Not needed on macOS where NSWorkspace delivers URLs to the running
# app natively.
[target."cfg(any(target_os = \"windows\", target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

# Windows-only: DPAPI session storage. The Windows Credential Manager
# (which the `keyring` crate uses) caps `CredentialBlob` at ~2560 bytes,
# and a Supabase session payload (JWT access_token + JWT user object +
# provider_token + refresh_token) is reliably 3-4 KB. CredWrite returns
# ERROR_INVALID_PARAMETER, the keyring crate returns Err, and our
# previous storage adapter silently swallowed it — sessions worked
# in-memory but never persisted to disk, so every app close forced a
# fresh sign-in. We now write the session to a per-user DPAPI-encrypted
# file under `%LOCALAPPDATA%\com.houston.app\auth\<key>.dpapi` instead.
# DPAPI binds the ciphertext to the Windows user account so a copied
# file is useless to another user. See `src/auth.rs` storage module.
[target."cfg(target_os = \"windows\")".dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }
